--- a/styles.css
+++ b/styles.css
@@ -507,11 +507,19 @@ section{
     }
     
     .header{
-        padding: 0.1rem 1.5rem;
+        padding: 0.1rem 0.5rem;
     }
 
     body{
         font-size:50%;
+    }
+
+    .content p{
+        font-size:1rem;
+    }
+    
+    .footer .links a{
+        font-size:1rem;
     }
 
 }
