changed background color and icon

--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,8 @@
 
 :root{
     --main-color: #cc8b3b;
-    --black:#13131a;
-    --bg: #010103;
+    --black:#7c5d44e1;
+    --bg: #322C2B;
     --border: .1rem solid rgba(255,255,255,.3);
 }
 
